# birdcage

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-test.yml
include/: birdcage.h
include/birdcage/: canary.h  randomize.h  securearray.h  securedata.h
src/: canary.cpp  randomize.cpp  securedata.cpp
tests/: CMakeLists.txt  monitor.cpp  testcanary.cpp  testrandomize.cpp  testsecurearray.cpp  testsecuredata.cpp
tools/: mkreldir.cpp
